--- a/.github/workflows/personal-docker-image.yml
+++ b/.github/workflows/personal-docker-image.yml
@@ -23,5 +23,6 @@ jobs:
       - name: Build and push
         uses: docker/build-push-action@v3
         with:
+          context: personalized-docker-image
           push: true
           tags: user/app:latest
