adjust dockerfile path

--- a/.github/workflows/personal-docker-image.yml
+++ b/.github/workflows/personal-docker-image.yml
@@ -6,6 +6,12 @@ on:
       - 'main'
     paths:
       - 'personalized-docker-image/*'
+  workflow_dispatch:
+    inputs:
+      name:
+        description: 'Build Now'
+        required: false
+        default: 'I just wanna build it now'
 
 jobs:
   docker:
