--- a/.github/workflows/personal-docker-image.yml
+++ b/.github/workflows/personal-docker-image.yml
@@ -16,6 +16,9 @@ on:
 jobs:
   docker:
     runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: ./personalized-docker-image
     steps:
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v2
@@ -29,6 +32,5 @@ jobs:
       - name: Build and push
         uses: docker/build-push-action@v3
         with:
-          context: personalized-docker-image
           push: true
           tags: user/app:latest
