--- a/.github/workflows/personal-docker-image.yml
+++ b/.github/workflows/personal-docker-image.yml
@@ -27,6 +27,8 @@ jobs:
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
+      - name: Check files
+        run: ls -l .
       - name: Build and push
         uses: docker/build-push-action@v3
         with:
