--- a/.github/workflows/personal-docker-image.yml
+++ b/.github/workflows/personal-docker-image.yml
@@ -32,6 +32,6 @@ jobs:
       - name: Build and push
         uses: docker/build-push-action@v3
         with:
-          context: "./personalized-docker-image"
+          context: ./personalized-docker-image
           push: true
           tags: user/app:latest
