--- a/personalized-docker-image/Dockerfile
+++ b/personalized-docker-image/Dockerfile
@@ -19,3 +19,6 @@ WORKDIR /app
 # Install dependencies
 COPY poetry.lock pyproject.toml ./
 RUN poetry install
+
+EXPOSE 8888
+CMD [ "jupyter", "notebook", "--ip=0.0.0.0", "--port=8888", "--no-browser", "--allow-root" ]
