--- a/personalized-docker-image/Dockerfile
+++ b/personalized-docker-image/Dockerfile
@@ -1,6 +1,13 @@
 FROM python:3.10-slim
 MAINTAINER hi@leima.is
 
+RUN apt-get update
+RUN apt-get install -y --no-install-recommends make build-essential libssl-dev zlib1g-dev libbz2-dev libreadline-dev libsqlite3-dev wget curl llvm libncurses5-dev xz-utils tk-dev libxml2-dev libxmlsec1-dev libffi-dev liblzma-dev
+
+ENV HOME="/root"
+WORKDIR ${HOME}
+RUN apt-get install -y git
+
 ENV POETRY_VERSION=1.3.1
 ENV POETRY_HOME=/opt/poetry
 ENV POETRY_VENV=/opt/poetry-venv
